[FIX] Notification: Fixed a style issue with message overflow.

--- a/components/notification/style/index.less
+++ b/components/notification/style/index.less
@@ -114,8 +114,7 @@
     }
 
     &-message {
-      display: inline-block;
-      width: 100%;
+      display: block;
       margin-bottom: 0.08rem;
       color: @heading-color;
       font-size: @font-size-lg;
